# mlcpppy

./: .clang-format  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: check_pull_request.yml  main.yml  update_merge_main_debug.yml
examples/: main.cpp  plot_results.py
include/mlcpppy/: export.h
include/mlcpppy/classifiers/: IClassifier.h  classifier.h  knn.h  stream_classifier.h
include/mlcpppy/classifiers/neighbors/: kdtree.h  nearest_neighbor.h  point.h
include/mlcpppy/instances/: attribute.h  instance.h  instances.h
src/classifiers/: knn.cpp
src/classifiers/neighbors/: kdtree.cpp
